k8chart/backend/apply/service-node.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  namespace: myspace
spec:
  type: NodePort
  ports:
  - name: nodeport
    port: 8080
    nodePort: 30080
  selector:
    app: backend-todo
