k8chart/backend/apply/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: myspace
  labels:
    app: backend-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: backend-todo
