k8chart/backend/apply/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bacend-ingress
  namespace: myspace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-todo
            port:
              number: 8080
